done hover and cursor

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
             </g>
           </svg>
         </button>
+        <button type='button' class='pen'>
+          <img src="./assets/pencil2.svg" alt=""></button>
+
         <button type="button" id="eraser" class="erase">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -309,7 +312,7 @@
           </svg></div>
 
         <!-- <input type="color" class="color-picker" /> -->
-        <input type="range" min="1" max="100" class="range" />
+        <input type="range" min="1" max="50" value="3" class="range" />
         <!-- <div class="shape-btn" title="Shapes" id="shapes"> -->
 
           
@@ -483,6 +486,10 @@
           </div>
         </button>
       </div>
+      <span class="circle"></span>
+    <svg class="pencil" width="25" height="25" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M24.0659 2.62456C24.4632 2.22719 24.935 1.91197 25.4542 1.69692C25.9734 1.48186 26.5299 1.37117 27.0918 1.37117C27.6538 1.37117 28.2103 1.48186 28.7295 1.69692C29.2487 1.91197 29.7204 2.22719 30.1178 2.62456C30.5152 3.02194 30.8304 3.49369 31.0454 4.01288C31.2605 4.53208 31.3712 5.08855 31.3712 5.65052C31.3712 6.21249 31.2605 6.76896 31.0454 7.28816C30.8304 7.80735 30.5152 8.27911 30.1178 8.67648L9.69257 29.1017L1.37119 31.3712L3.64065 23.0498L24.0659 2.62456Z"stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
     </div>
     <script src="./script.js"></script>
   </body>
