--- a/index.html
+++ b/index.html
@@ -314,37 +314,9 @@
           </svg></div>
 
         <!-- <input type="color" class="color-picker" /> -->
-<<<<<<< HEAD
-        <input type="range" min="1" max="100" class="range" />
+        <input type="range" min="1" max="50" class="range" value="3" />
       <!-- shapes -->
         <div class="shape-btn" title="Shapes" id="shapes">
-=======
-        <input type="range" min="1" max="50" value="3" class="range" />
-        <!-- <div class="shape-btn" title="Shapes" id="shapes"> -->
-
-          
-        <button type="button" class="shape-btn" id="shapes">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            width="24"
-            height="25"
-            preserveAspectRatio="xMidYMid meet"
-            viewBox="0 0 1024 1025"
-            style="
-              -ms-transform: rotate(360deg);
-              -webkit-transform: rotate(360deg);
-              transform: rotate(360deg);
-            "
-          >
-            <path
-              d="M736 897q-119 0-203.5-84.5T448 609q0-15 2-32h302q10-11 14.5-64t-4.5-64l-68-125q23-3 42-3q119 0 203.5 84.5T1024 609t-84.5 203.5T736 897zm-42-384H169q-10-10-10-25t10-26L409 11q9-11 22.5-11T454 11l240 451q10 11 9.5 26t-9.5 25zm-310 96q0 81 34 151.5T512 881v112q0 13-9.5 22.5T480 1025H32q-13 0-22.5-9.5T0 993V545q0-13 9.5-22.5T32 513h65q4 53 14 64h275q-2 24-2 32z"
-              fill="#000000"
-            />
-            <rect x="0" y="0" width="24" height="25" fill="rgba(0, 0, 0, 0)" />
-          </svg>
-
->>>>>>> f17a217bc611139b412f70c0ae510d629ef695b6
           <div class="shape-display none">
             <div class="btn">
               <input type="color" id="shapeColor" />
